# Ownstash-Downloader

./: .env.example  .gitignore  README.md  all_in_one_downloader.txt  all_in_one_downloader_progress(claude).txt  eslint.config.js  generate-icons.js  guide_for_ibuilt_player.txt  index.html  left_off_claude.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  upcoming_features(gemini-shortlist).txt  upcoming_features(opus-shortlist).txt
.Jules/: palette.md
.github/scripts/: prepare-release-from-tag.mjs
.jules/: bolt.md  palette.md  sentinel.md
backend/: .env.example  README.md  package-lock.json  package.json  render.yaml
backend/src/: index.js
browser-sidecar/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
chrome-extension/: README.md  background.js  content.css  content.js  generate-icons.js  manifest.json  popup.css  popup.html  popup.js
frontend-landing-page/: index.html  middleware.ts  package-lock.json  package.json  tailwind.config.js
public/: oauth-callback.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  download-binaries.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  download_router.rs  downloader.rs  extension_server.rs  health_metrics.rs  host_reputation.rs  lib.rs  main.rs  media_server.rs  native_integration.rs  scheduler.rs  secure_storage.rs  snde.rs  spotify_downloader.rs  updater.rs  vault.rs  vault_download.rs  watchdog.rs
src-tauri/src/modules/: addon_manager.rs
tests/: aria.spec.ts
(+50 files in other folders)
