[package]
name = "slasshy-omnidownloader"
version = "0.1.0"
description = "Cross-platform media downloader, organizer, and converter"
authors = ["Suman Patgiri"]
edition = "2021"

[lib]
name = "slasshy_omnidownloader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "sync"] }
thiserror = "1"
lazy_static = "1.5"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2"
urlencoding = "2"
warp = "0.3"
tauri-plugin-single-instance = "2.3.6"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
md5 = "0.8.0"
which = "8.0.0"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
# Vault encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
